# cFiit

120816_2022_1/: 120816_2022_1_2.c  120816_2022_1_3.c  120816_2022_1_4.c  120816_2022_1_5.c  120816_2022_1_6.c  120816_2022_1_7.c  120816_2022_1_8.c
120816_2022_2/: 120816_2022_2_1.c  120816_2022_2_2.c  120816_2022_2_3.c  120816_2022_2_5.c  120816_2022_2_7.c
120816_2022_3/: 120816_2022_3_1.c  120816_2022_3_2.c  120816_2022_3_4.c  120816_2022_3_5.c  120816_2022_3_8.c  CMakeLists.txt
Kalmar1/: CMakeLists.txt  main.c
Uloha2/: 120816_2022_2_3.c  120816_2022_2_4.c  120816_2022_2_6.c  CMakeLists.txt
test/: CMakeLists.txt  main.c
