cmake_minimum_required(VERSION 3.23)
project(120816_2022_3 C)

set(CMAKE_C_STANDARD 90)


add_executable(120816_2022_3_1 120816_2022_3_1.c)
add_executable(120816_2022_3_2 120816_2022_3_2.c)
add_executable(120816_2022_3_3 120816_2022_3_3.c)
add_executable(120816_2022_3_4 120816_2022_3_4.c)
add_executable(120816_2022_3_5 120816_2022_3_5.c)
add_executable(120816_2022_3_6 120816_2022_3_6.c)
add_executable(120816_2022_3_7 120816_2022_3_7.c)
add_executable(120816_2022_3_8 120816_2022_3_8.c)
add_executable(120816_2022_3_9 120816_2022_3_9.c)
add_executable(120816_2022_3_10 120816_2022_3_10.c)