cmake_minimum_required(VERSION 3.23)
project(Uloha2 C)

set(CMAKE_C_STANDARD 90)

add_executable(120816_2022_2_1 120816_2022_2_1.c)
add_executable(120816_2022_2_2 120816_2022_2_2.c)
add_executable(120816_2022_2_3 120816_2022_2_3.c)
add_executable(120816_2022_2_4 120816_2022_2_4.c)
add_executable(120816_2022_2_5 120816_2022_2_5.c)
add_executable(120816_2022_2_6 120816_2022_2_6.c)
add_executable(120816_2022_2_7 120816_2022_2_7.c)
add_executable(120816_2022_2_8 120816_2022_2_8.c)